--- a/Project_2/css/app.css
+++ b/Project_2/css/app.css
@@ -1,3 +1,11 @@
+#me {
+    height: auto;
+    width: auto;
+    background: url("https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .page-head {
     height: auto;
     width: 100%;
@@ -12,6 +20,7 @@
 }
 
 .div-lesson {
+    margin-top: 0.1%;
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -48,4 +57,32 @@
 
 .div-lesson {
     background-color: rgb(240,240,240);
+    opacity: 0.7;
+}
+
+.icons {
+    height: 50%;
+    width: 15%;
+    margin-left: 10%;
+}
+
+ul,ol {
+    color: white;
+}
+
+li {
+    font-size: 110%;
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+.catalog {
+    background-color: rgba(250,90,90,0.7);
+}
+
+body {
+    background-color: black;
 }
